Replace links to images with images

--- a/recipes/garlic-lemon_salmon.html
+++ b/recipes/garlic-lemon_salmon.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Garlic-Lemon Salmon Recipe</h1>
 
-    <a href="../recipe_images/garlic-lemon_salmon.png">Garlic-Lemon Salmon</a>
+    <img src="../recipe_images/garlic-lemon_salmon.png">
 
     <h3>Description</h3>
     <p>This simple salmon recipe is a delicious way to prepare fresh fillets using just a few ingredients from your pantry.</p>
