--- a/recipes/macaroni_and_cheese.html
+++ b/recipes/macaroni_and_cheese.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Macaroni and Cheese Recipe</h1>
 
-    <a href="../recipe_images/macaroni_and_cheese.png">Macaroni and Cheese</a>
+    <img src="../recipe_images/macaroni_and_cheese.png">
 
     <h3>Description</h3>
     <p>Quick, easy, and tasty macaroni and cheese dish. Fancy, designer mac and cheese often costs forty or fifty dollars to prepare when you have so many expensive cheeses, but they aren't always the best tasting. This simple recipe is cheap and tasty.</p>
