--- a/recipes/chicken_tortilla_soup.html
+++ b/recipes/chicken_tortilla_soup.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Chicken Tortilla Soup Recipe</h1>
 
-    <a href="../recipe_images/chicken_tortilla_soup.png">Chicken Tortilla Soup</a>
+    <img src="../recipe_images/chicken_tortilla_soup.png">
 
     <h3>Description</h3>
     <p>This chicken tortilla soup with shredded chicken, black beans, and corn is quick to make, full of flavor, and very filling! It's garnished with chopped fresh avocado, Monterey Jack cheese, crushed tortilla chips, and green onion. This soup freezes well.</p>
