--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>[INSERT TITLE HERE]</title>
+    <title>Recipe Homepage</title>
   </head>
 
   <body>
